--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="container-fluid p-3 bg-primary text-white text-center">
   <div class="logo">
-   <img src="avia.jpg" class="float-start" alt="logo" width="200" height="100">
+   <img src="avia.JPG" class="float-start" alt="logo" width="200" height="100">
  </div>
  <h1>Aviagen India</h1>
   <p>Main Farm Switches</p> 
